# kinslayer-mud-2004-11-10

./: .env.sample  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker-start.sh
lib/: README
lib/etc/: board.mort  clans
lib/misc/: messages  socials  status  xnames
lib/plrobjs/: purgedir  purgeobjs  searchfor
lib/text/: greetansi  handbook  motd  news  policies  startup
lib/text/help/: help.hlp  screen
lib/world/: zone.lst
lib/world/kit/: 0.kit  index
lib/world/mob/: 0.mob  5.mob  index
lib/world/shp/: 0.shp  index
lib/world/text/: background  credits  immlist  info  motd  policies  startup  wizlist
lib/world/text/help/: help.hlp
lib/world/trg/: 0.trg  5.trg  index
lib/world/wld/: 0.wld  5.wld  Blank Wld Template.txt  index
lib/world/zon/: 0.zon  5.zon  blank zone template.txt  index
src/: Makefile  Makefile.in  act.comm.cpp  act.informative.cpp  act.item.cpp  act.movement.cpp  act.offensive.cpp  act.other.cpp  act.social.cpp  act.wizard.cpp  aedit.cpp  alias.cpp  ban.cpp  binary.h  boards.cpp  boards.h  buffer.cpp  buffer.h  buffer_i.h  buffer_opt.h  class.cpp  comm.cpp  comm.h  conf.h  config.cpp  constants.cpp  constants.h  db.cpp  db.h  dg_comm.cpp  dg_db_scripts.cpp  dg_event.cpp  dg_handler.cpp  dg_mobcmd.cpp  dg_objcmd.cpp  dg_olc.cpp  dg_scripts.cpp  dg_scripts.h  dg_triggers.cpp  dg_wldcmd.cpp  (+37 more)
src/util/: Makefile.in  autowiz.c  delobjs.c  kitupdate.cpp  play2to3.c  purgeplay.c  shopconv.c  showplay.c  wld2html.c
